--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
     	<button onclick="riverData()"> River Data
     		<script type="text/javascript">
-    			riverData = async () => {
-    				let response = await fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
+    			function riverData () {
+    				let response = fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
     				console.log('response', response)
     			}
     		</script>
