--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     		<script type="text/javascript">
     			const riverData = async () => {
     				let response = await fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
-    				console.log('response', response)
+    				console.log('response', response.status)
     			}
     		</script>
     	</button>
