--- a/index.html
+++ b/index.html
@@ -60,10 +60,21 @@
     </div>
     	<button onclick="riverData()"> River Data
     		<script type="text/javascript">
-    			const riverData = async () => {
-    				let response = await fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
-    				console.log('response', response.status)
-    				console.log('response', response.response)
+    			const riverData() {
+    				fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
+    				.then(function(response) {
+    					if (response.status !== 200) {
+    						console.log('There was a problem')
+    						return
+    					}
+
+    					response.json().then(function(data) {
+    						console.log('river data', data)
+    					})
+    				})
+    				.catch(function(error) {
+    					console.log('Fetch Error', error)
+    				})
     			}
     		</script>
     	</button>
