--- a/index.html
+++ b/index.html
@@ -52,34 +52,85 @@
 	<meta name="author" content="Jason Sinn">
 	<link rel="shortcut icon" href="./css/images/favicon.ico">
   	<title>Calhoun's RV Retreat</title> 
+  	<script type="text/javascript">
+  	var canvas ;
+	var context ;
+	var Val_max;
+	var Val_min;
+	var sections;
+	var xScale;
+	var yScale;
+			// Values for the Data Plot, they can also be obtained from a external file
+	var upper =  [100, 102, 87, , 100, 123, 100, 90, 87, 91, 93, 88];
+	var lower = [30, 50, 70, 80, 90, 100, 95, 91, 85, 92, 99, 130];
+
+	function init() {
+			// set these values for your data 
+		sections = 12;
+		Val_max = 130;
+		Val_min = -40;
+		var stepSize = 10;
+		var columnSize = 50;
+		var rowSize = 50;
+		var margin = 10;
+		var xAxis =  
+			//
+			
+		canvas = document.getElementById("canvas");
+		context = canvas.getContext("2d");
+		context.fillStyle = "#0099ff"
+		context.font = "20 pt Verdana"
+		
+		yScale = (canvas.height - columnSize - margin) / (Val_max - Val_min);
+		xScale = (canvas.width - rowSize) / sections;
+		
+		context.strokeStyle="#009933"; // color of grid lines
+		context.beginPath();
+			// print Parameters on X axis, and grid lines on the graph
+		for (i=1;i<=sections;i++) {
+			var x = i * xScale;
+			context.fillText(xAxis[i], x,columnSize - margin);
+			context.moveTo(x, columnSize);
+			context.lineTo(x, canvas.height - margin);
+		}
+			// print row header and draw horizontal grid lines
+		var count =  0;
+		for (scale=Val_max;scale>=Val_min;scale = scale - stepSize) {
+			var y = columnSize + (yScale * count * stepSize); 
+			context.fillText(scale, margin,y + margin);
+			context.moveTo(rowSize,y)
+			context.lineTo(canvas.width,y)
+			count++;
+		}
+		context.stroke();
+		
+		context.translate(rowSize,canvas.height + Val_min * yScale);
+		context.scale(1,-1 * yScale);
+		
+			// Color of each dataplot items
+			
+		context.strokeStyle="#FF0066";
+		plotData(upper);
+		context.strokeStyle="#9933FF";
+		plotData(lower);
+	}
+
+	function plotData(dataSet) {
+		context.beginPath();
+		context.moveTo(0, dataSet[0]);
+		for (i=1;i<sections;i++) {
+			context.lineTo(i * xScale, dataSet[i]);
+		}
+		context.stroke();
+}
+  	</script>
 </head>
 <body>
 	<header>
 		
 	</header>
     </div>
-    	<button onclick="riverData()"> River Data
-    		<script type="text/javascript">
-    			function riverData() {
-    				fetch('//waterservices.usgs.gov/nwis/iv/?format=json&sites=08188800&period=P3DT12H&parameterCd=00065&siteStatus=all')
-    				.then(function(response) {
-    					if (response.status !== 200) {
-    						console.log('There was a problem')
-    						return
-    					}
-
-    					response.json().then(function(data) {
-    						console.log('river data', data.value)
-    						console.log('river data', data.value.timeSeries[0])
-    						console.log('river data', data.value.timeSeries[0].values)
-    					})
-    				})
-    				.catch(function(error) {
-    					console.log('Fetch Error', error)
-    				})
-    			}
-    		</script>
-    	</button>
+    	<a href="/river.html"> River Page </a>
 		<form>
 			<fieldset name="personal">
 				<input 
