all info is updating

--- a/river.html
+++ b/river.html
@@ -56,7 +56,7 @@
 
 </head>
 <body>
-	<h1> River Level </h1>
+	<h1> Guadalupe River Level at Tivoli </h1>
 	<div id="riverLevel">
 		
 	</div>
@@ -72,5 +72,7 @@
   <script type="module" src="components/LineChart/lineChart.js"></script>
   <script type="module" src="components/LineChart/majorAxis.js"></script>
   <script type="module" src="components/LineChart/minorAxis.js"></script>
+  <script type="module" src="components/LineChart/dataBox.js"></script>
+  <script type="module" src="components/LineChart/trendInfo.js"></script>
 </body>
 </html>
