working html form

--- a/index.html
+++ b/index.html
@@ -58,118 +58,11 @@
 	<header>
 		
 	</header>
-    </div>
+ 
     	<a href="/river.html"> River Page </a>
-		<form>
-			<fieldset name="personal">
-				<input 
-					id="first_name"
-					type="text"
-					name="first_name"
-					placeholder="First Name"
-					required
-					pattern="^[a-zA-Z]+$"
-					onblur="capitalize()">
-					<script type="text/javascript">
-						function capitalize() {
-							let first = document.getElementById('first_name')
-							let string = first.value.replace(/[^a-zA-Z]/g, '')
-							first.value = string.charAt(0).toUpperCase() + string.slice(1).toLowerCase()
-						}
-					</script>
-				<br>
-				<input 
-					id = "last_name"
-					type="text"
-					name="last_name"
-					placeholder="Last Name"
-					required
-					pattern="^[a-zA-Z]+$"
-					onblur="capitalizeLast()">
-					<script type="text/javascript">
-						function capitalizeLast() {
-							let last = document.getElementById('last_name')
-							let string = last.value.replace(/[^a-zA-Z]/g, '')
-							last.value = string.charAt(0).toUpperCase() + string.slice(1).toLowerCase()
-						}
-					</script>
-				<br>
-				<input
-					type="email"
-					name="email"
-					placeholder="Email Address"
-					required>
-				<br>
-				<input 
-					id="drivers_state"
-					type="text"
-					name="drivers_state"
-					placeholder="Issuing State"
-					required
-					pattern="^(?-i:A[LKSZRAEP]|C[AOT]|D[EC]|F[LM]|G[AU]|HI|I[ADLN]|K[SY]|LA|M[ADEHINOPST]|N[CDEHJMVY]|O[HKR]|P[ARW]|RI|S[CD]|T[NX]|UT|V[AIT]|W[AIVY])$"
-					onblur="driverState()">
-					<script type="text/javascript">
-						let drivers_state = document.getElementById('drivers_state')
-						drivers_state.oninvalid = function(event){
-  							event.target.setCustomValidity('Enter a valid state abbreviation')}
-						function driverState() {
-							let string = drivers_state.value.replace(/[^a-zA-Z]/g, '')
-							drivers_state.value = string.charAt(0).toUpperCase() + string.charAt(1).toUpperCase()
-						}
-					</script>
-				<br>
-				<input
-					id="drivers_number"
-					type="text"
-					name="drivers_number"
-					placeholder="Drivers License Number"
-					required
-					pattern="^[0-9]*$"
-					onblur="onlyNumbers()">
-					<script type="text/javascript">
-						let drivers_number = document.getElementById('drivers_number')
-  						drivers_number.oninvalid = function(event){
-  							event.target.setCustomValidity('Only enter numbers')
-  						}
-  						function onlyNumbers(){
-							let string = drivers_number.value.replace(/[^0-9]/g, '')
-							drivers_number.value = string
-  						}
-					</script>
-				<br>
-				<input 
-					id="tel"
-					type="tel"
-					name="phone_number"
-					pattern="((\(\d{3}\) ?)|(\d{3}-))?\d{3}-\d{4}" placeholder="(123) 456-7890"
-					required
-					onblur="telFormat()">
-					<script type="text/javascript">
-						let tel = document.getElementById('tel')
-  						tel.oninvalid = function(event){
-  							event.target.setCustomValidity('Phone number should be 10 digits. e.g. (123) 456-7890')
-  						}
-  						function telFormat(){
-  						var numbers = tel.value.replace(/\D/g, ''),
-        				char = { 0: '(', 3: ') ', 6: '-' };
-            			tel.value = '';
-            			for (var i = 0; i < numbers.length; i++) {
-                		tel.value += (char[i] || '') + numbers[i];
-            			}
-            		}
-  					</script>
-  				<br>
-				<input 
-					type="text"
-					name="postal_code"
-					pattern="^((\d{5}-\d{4})|(\d{5})|([A-Z]\d[A-Z]\s\d[A-Z]\d))$"
-					placeholder="12345-1234"
-					required
-					>
-			</fieldset>
-			<input type="submit">
-			<input type="reset">
-		</form>
+    	<br/>
+    	<a href="/reservations.html"> Reservations Page </a>
+		
 	<footer>
 		
 	</footer>
